--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,6 @@ body {
 main{
     width: 60%;
     height: 90vh;
-
     background-color: white;
     border-radius: var(--radius);
     display: flex;
@@ -66,7 +65,7 @@ header{
     color: white;
     background: #656565;
     border-radius: var(--radius);
-
+    border: none;
 }
 
 #clearButton {
@@ -74,10 +73,84 @@ header{
 }
 
 .messages{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     flex: 1;
     min-height: 0;
     overflow-y: auto;
     padding: 1rem;
+}
+
+.msg-row {
+    display: flex;
+    flex-direction: column;
+    max-width: 47ch;
+    margin: 0.5rem 0;
+}
+
+
+.msg-row.user { align-self: flex-end; }
+.msg-row.bot  { align-self: flex-start; }
+
+
+text-bubble {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: var(--radius);
+    padding: 1rem 1rem;
+    line-height: 1.45;
+    word-break: break-word;
+}
+
+text-bubble .action {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+option-row{
+    opacity: 0;
+    transition: opacity 0.4s ease;
+    gap: 90rem;
+}
+
+option-row:hover{
+    opacity: 1;
+}
+
+text-bubble.user {
+    background: royalblue;
+    color: #fff;
+}
+text-bubble.bot  {
+    background: #e5e7eb;
+    color: #111;
+}
+
+.deleteButton{
+    background: white;
+    color: red;
+    padding: .2rem .3rem;
+    border: none;
+    border-radius: .5rem;
+}
+
+.deleteButton:hover{
+    cursor: pointer;
+}
+
+.editButton {
+    border-radius: .5rem;
+    background: white;
+    color: deepskyblue;
+    padding: .2rem .3rem;
+    border: none;
+}
+
+.editButton:hover{
+    cursor: pointer;
 }
 
 .input-area{
@@ -92,13 +165,15 @@ input{
     border-radius: var(--radius);
     flex: 1;
     background-color: lightgrey;
+    border: none;
 }
 
-button{
+.input-area button{
     padding: 1rem;
     min-width: 6rem;
     border-radius: var(--radius);
     color: white;
     background-color: royalblue;
     cursor : pointer;
+    border: none;
 }
